--- a/kitty-themes/Sakura_Night.conf
+++ b/kitty-themes/Sakura_Night.conf
@@ -6,10 +6,10 @@
 ## upstream: https://pandacatplayz.github.io/kitty-themes/Sakura_Night.conf
 ## blurb: A custom kitty dark theme loosely using the Endesga 32 palette
 
-background            #f7f7f7
-foreground            #494542
-cursor                #494542
-selection_background  #a4a1a1
+background            #181425
+foreground            #F06292
+cursor                #F06292
+selection_background  #F06292
 
 #: black
 color0 #181425
@@ -43,3 +43,4 @@ color10 #63c74d
 # color7  #c0cbdc
 # color15 #ffffff
 selection_foreground #f7f7f7
+
