--- a/kitty-themes/Sakura_Night.conf
+++ b/kitty-themes/Sakura_Night.conf
@@ -24,23 +24,22 @@ color2  #3e8948
 color10 #63c74d
 
 #: yellow
-# color3  #feae34
-# color11 #fee761
+color3  #feae34
+color11 #fee761
 
 #: blue
-# color4  #124e89
-# color12 #0099db
+color4  #124e89
+color12 #0099db
 
 #: magenta
-# color5  #b55088
-# color13 #F06292
+color5  #b55088
+color13 #F06292
 
 #: cyan
-# color6  #008080
-# color14 #66b2b2
+color6  #008080
+color14 #66b2b2
 
 #: white
-# color7  #c0cbdc
-# color15 #ffffff
+color7  #c0cbdc
+color15 #ffffff
 selection_foreground #f7f7f7
-
